<resources>
    <string name="app_name">Lab 11</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="species">Species:</string>
    <string name="status">Status:</string>
    <string name="gender">Gender:</string>
    <string name="origin">Origin:</string>
    <string name="episodes">Episodes:</string>
    <string name="characters">Characters</string>
    <string name="character_detail">Character Detail</string>
    <string name="error_fetching">Error al llamar al API</string>
    <string name="error_email_password">Correo o contraseña incorrecta</string>
    <string name="login">Iniciar sesión</string>
    <string name="password">Contraseña</string>
    <string name="email">Correo</string>
    <string name="my_email">jcdurini@uvg.edu.gt</string>
    <string name="name">Name:</string>
    <string name="guardar_cambios">Guardar cambios</string>
</resources>